# MiniEngin

./: .gitignore  CMakeLists.txt  README.md  log.txt
MiniEngine/: CMakeLists.txt  MiniEngine.sln  MiniEngine.vcxproj  MiniEngine.vcxproj.filters  UML.dia
MiniEngine/Assets/World/: HelloWorld.json
MiniEngine/Configs/: MiniEngineEditor.ini
MiniEngine/Source/Editor/: CMakeLists.txt  Editor.cpp  Editor.h  EditorUI.cpp  EditorUI.h  Main.cpp
MiniEngine/Source/MetaParser/: CMakeLists.txt
MiniEngine/Source/MetaParser/Parser/: main.cpp
MiniEngine/Source/MetaParser/Parser/Common/: Precompiled.h  SchemaModule.h
MiniEngine/Source/MetaParser/Parser/Cursor/: Cursor.cpp  Cursor.h  CursorType.cpp  CursorType.h
MiniEngine/Source/MetaParser/Parser/Generator/: Generator.cpp  Generator.h  ReflectionGenerator.cpp  ReflectionGenerator.h  SerializerGenerator.cpp  SerializerGenerator.h
MiniEngine/Source/MetaParser/Parser/LanguageTypes/: Class.cpp  Class.h  Field.cpp  Field.h  TypeInfo.cpp  TypeInfo.h
MiniEngine/Source/MetaParser/Parser/Meta/: MetaDataConfig.h  MetaInfo.cpp  MetaInfo.h  MetaUtils.cpp  MetaUtils.h
MiniEngine/Source/MetaParser/Parser/Parser/: Parser.cpp  Parser.h
MiniEngine/Source/MetaParser/Parser/TemplateManager/: TemplateManager.cpp  TemplateManager.h
MiniEngine/Source/Precompile/: Precompile.cmake  Precompile.json.in
MiniEngine/Source/Runtime/: CMakeLists.txt  Engine.cpp  Engine.h
MiniEngine/Source/Runtime/Core/Base/: Macro.h
MiniEngine/Source/Runtime/Core/Log/: LogSystem.cpp  LogSystem.h
MiniEngine/Source/Runtime/Core/Math/: Math.h  MathHeaders.h  Matrix4.cpp  Matrix4.h  Quaternion.h  Vector2.h  Vector3.h  Vector4.h
MiniEngine/Source/Runtime/Core/Meta/Reflection/: Reflection.cpp  Reflection.h  ReflectionRegister.cpp  ReflectionRegister.h
MiniEngine/Source/Runtime/Core/Meta/Serializer/: Serializer.cpp  Serializer.h
MiniEngine/Source/Runtime/Function/Framework/Level/: Level.cpp  Level.h
MiniEngine/Source/Runtime/Function/Framework/Object/: Object.cpp  Object.h  ObjectIDAllocator.cpp  ObjectIDAllocator.h
MiniEngine/Source/Runtime/Function/Framework/World/: WorldManager.cpp  WorldManager.h
MiniEngine/Source/Runtime/Function/Global/: GlobalContext.cpp  GlobalContext.h
MiniEngine/Source/Runtime/Function/Render/: RHI.cpp  RHI.h  RenderCamera.h  RenderCommon.h  RenderEntity.h  RenderObject.h  RenderPass.cpp  RenderPass.h  RenderPassBase.cpp  RenderPassBase.h  RenderPipeline.cpp  RenderPipeline.h  RenderPipelineBase.cpp  RenderPipelineBase.h  RenderResource.cpp  RenderResource.h  RenderResourceBase.cpp  RenderResourceBase.h  RenderScene.cpp  RenderScene.h  RenderSwapContext.cpp  RenderSwapContext.h  RenderSystem.cpp  RenderSystem.h  RenderType.h  WindowSystem.cpp  WindowSystem.h
MiniEngine/Source/Runtime/Function/UI/: WindowUI.h
MiniEngine/Source/Runtime/Resource/AssetManager/: AssetManager.cpp  AssetManager.h
MiniEngine/Source/Runtime/Resource/ConfigManager/: ConfigManager.cpp  ConfigManager.h
MiniEngine/Source/_generated/reflection/: Level.reflection.gen.h  Matrix4.reflection.gen.h  Object.reflection.gen.h  Quaternion.reflection.gen.h  RenderObject.reflection.gen.h  Vector2.reflection.gen.h  Vector3.reflection.gen.h  Vector4.reflection.gen.h  World.reflection.gen.h  all_reflection.h
MiniEngine/Source/_generated/serializer/: Level.serializer.gen.h  Matrix4.serializer.gen.h  Object.serializer.gen.h  Quaternion.serializer.gen.h  RenderObject.serializer.gen.h  Vector2.serializer.gen.h  Vector3.serializer.gen.h  Vector4.serializer.gen.h  World.serializer.gen.h  all_serializer.h  all_serializer.ipp
MiniEngine/Template/: AllReflectionFile.mustache  AllSerializer.ipp.mustache  CommonReflectionFile.mustache  CommonSerializerGenFile.mustache
(+11 files in other folders)
